--- a/aur-repo/python-kiauto/PKGBUILD
+++ b/aur-repo/python-kiauto/PKGBUILD
@@ -19,9 +19,9 @@ depends=(
     python-psutil
 )
 makedepends=(python-build
-            python-installer
-            python-wheel
-            python-setuptools)
+    python-installer
+    python-wheel
+    python-setuptools)
 options=('!strip')
 source=("${_name}-${pkgver}.tar.gz::https://files.pythonhosted.org/packages/source/${_name::1}/$_name/$_name-$pkgver.tar.gz")
 noextract=()
@@ -35,4 +35,6 @@ build() {
 package() {
     cd "${srcdir}/${_name}-${pkgver}"
     python -m installer --destdir="${pkgdir}" dist/*.whl
+    # https://wiki.archlinux.org/index.php/Python_package_guidelines
+    rm -rf ${pkgdir}/usr/lib/python*/site-packages/tests/
 }
