--- a/aur-repo/python-pydevicetree/PKGBUILD
+++ b/aur-repo/python-pydevicetree/PKGBUILD
@@ -44,4 +44,6 @@ build() {
 package() {
     cd "${srcdir}/${_name}-${pkgver}"
     python -m installer --destdir="${pkgdir}" dist/*.whl
+    # https://wiki.archlinux.org/index.php/Python_package_guidelines
+    rm -rf ${pkgdir}/usr/lib/python*/site-packages/tests/
 }
