--- a/aur-repo/magiskboot-git/PKGBUILD
+++ b/aur-repo/magiskboot-git/PKGBUILD
@@ -2,7 +2,7 @@
 
 pkgbase=magiskboot-git
 pkgname=magiskboot-git
-pkgver=28101.78.r2.g4e5a722
+pkgver=28101.78.r3.gce9e813
 pkgrel=1
 pkgdesc="Magiskboot_ndk"
 arch=($CARCH)
