--- a/aur-repo/python-fontpens-git/PKGBUILD
+++ b/aur-repo/python-fontpens-git/PKGBUILD
@@ -1,8 +1,8 @@
 # Maintainer: taotieren <admin@taotieren.com>
 
 pkgname=python-fontpens-git
-pkgver=0.3.0.r0.g9110aee
-pkgrel=5
+pkgver=0.3.0.r1.g1444f3f
+pkgrel=1
 pkgdesc='A collection of classes implementing the pen protocol for manipulating glyphs.'
 url='https://github.com/robotools/fontpens'
 license=('BSD')
