--- a/aur-repo/bookget-git/PKGBUILD
+++ b/aur-repo/bookget-git/PKGBUILD
@@ -1,8 +1,8 @@
 # Maintainer: taotieren <admin@taotieren.com>
 
 pkgname=bookget-git
-pkgver=25.0116.4.g4ae4bdc
-pkgrel=3
+pkgver=25.0116.5.g4e14d1b
+pkgrel=1
 pkgdesc="bookget 数字图书馆下载工具，目前支持约 50+ 个数字图书馆。"
 arch=($CARCH)
 url="https://github.com/deweizhu/bookget"
