--- a/aur-repo/magiskboot-git/PKGBUILD
+++ b/aur-repo/magiskboot-git/PKGBUILD
@@ -2,7 +2,7 @@
 
 pkgbase=magiskboot-git
 pkgname=magiskboot-git
-pkgver=28101.78.r4.gdceb242
+pkgver=28101.78.r5.g31b143d
 pkgrel=1
 pkgdesc="Magiskboot_ndk"
 arch=($CARCH)
