--- a/aur-repo/qsaharaserver-git/lilac.yaml
+++ b/aur-repo/qsaharaserver-git/lilac.yaml
@@ -4,8 +4,8 @@ pre_build: vcs_update
 post_build_script: |
   git_pkgbuild_commit()
   update_aur_repo()
-repo_depends:
-  - kickstart-git
+# repo_depends:
+#   - kickstart-git
 update_on:
   - source: github
     github: Muhmmad-Almuhmmah/QSaharaServer
