--- a/aur-repo/magiskboot-git/PKGBUILD
+++ b/aur-repo/magiskboot-git/PKGBUILD
@@ -2,7 +2,7 @@
 
 pkgbase=magiskboot-git
 pkgname=magiskboot-git
-pkgver=28101.78.r6.g5248301
+pkgver=28101.78.r7.gf17c0fb
 pkgrel=1
 pkgdesc="Magiskboot_ndk"
 arch=($CARCH)
