--- a/aur-repo/stlink-server/lilac.yaml
+++ b/aur-repo/stlink-server/lilac.yaml
@@ -1,8 +1,6 @@
 maintainers:
   - github: taotieren
-pre_build_script: |
-  aur_pre_build(maintainers=['yjun'])
-  add_makedepends(['curl'])
+pre_build_script: aur_pre_build(maintainers=['yjun'])
 post_build: aur_post_build
 update_on:
   - source: aur
