--- a/aur-repo/gmv-rs/PKGBUILD
+++ b/aur-repo/gmv-rs/PKGBUILD
@@ -4,7 +4,7 @@ pkgname=gmv-rs
 _name=${pkgname%-rs}
 pkgver=0.1
 pkgrel=1
-pkgdesc="A debugging toolset and library for debugging embedded ARM and RISC-V targets on a separate host"
+pkgdesc="This is a video surveillance implementation based on GB28181: compatible with 2016 and 2022 versions."
 arch=($CARCH)
 url="https://github.com/epimore/gmv"
 license=('Apache-2.0')
