--- a/aur-repo/gmv-rs/PKGBUILD
+++ b/aur-repo/gmv-rs/PKGBUILD
@@ -7,7 +7,7 @@ pkgrel=1
 pkgdesc="This is a video surveillance implementation based on GB28181: compatible with 2016 and 2022 versions."
 arch=($CARCH)
 url="https://github.com/epimore/gmv"
-license=('Apache-2.0')
+license=('MIT')
 provides=(
     ${_name}
     gmv-session
